[project]
name = "langgraph-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "duckduckgo-search>=8.0.2",
    "langchain>=0.3.25",
    "langchain-core>=0.3.63",
    "langchain-openai>=0.3.19",
    "langgraph>=0.4.8",
    "pillow>=11.2.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]
